Проект правка 12 от 19.05.2020

--- a/source/form.html
+++ b/source/form.html
@@ -51,7 +51,7 @@
           <div class="form-head">
             <div class="form-head__position form-head--sedona back-sedona"><img class="form-head__picture" src="img/text-sedona.svg" width="320" height="158" alt="sedona"></div>
             <h2 class="form-head__title">Оставьте свой отзыв</h2>
-            <p class="form-head__text">Помогите нашим отелям стать лучше!<br> Оставьте отзыв о них, а так же о<br>посещенных вами <br>достопримечательностях</p>
+            <p class="form-head__text">Помогите нашим отелям стать лучше! Оставьте&nbsp;отзыв&nbsp;о&nbsp;них, а&nbsp;так&nbsp;же&nbsp;о посещенных&nbsp;вами <br>достопримечательностях</p>
           </div>
 
           <form class="form-content" action="https://echo.htmlacademy.ru" method="POST">
