--- a/source/index.html
+++ b/source/index.html
@@ -54,8 +54,8 @@
             <div class="reasons__index1 reasons--sedona">
               <img class="reasons__index" src="img/text-sedona-index.svg" width="281" height="214" alt="sedona">
             </div>
-            <p class="reasons__number-zero">Седона – небольшой <br> городок в Аризоне, <br> заслуживающий большего!</p>
-            <p class="reasons__number-one">Рассмотрим 5 причин, по которым <br> Седона круче, чем Гранд Каньон!</p>
+            <p class="reasons__number-zero">Седона – небольшой городок в Аризоне, заслуживающий&nbsp;большего!</p>
+            <p class="reasons__number-one">Рассмотрим 5 причин, по которым Седона круче, чем Гранд Каньон!</p>
           </div>
 
           <ol class="reasons-list">
@@ -64,7 +64,7 @@
                 <div class="realtown__wrap realtown__wrap--triangle">
                   <h3 class="realtown__title">Настоящий городок</h3>
                   <span class="realtown__number">– №1 –</span>
-                  <p class="realtown__recomendation">Седона не аттрацион для туристов, <br> там течёт своя жизнь</p>
+                  <p class="realtown__recomendation">Седона не аттрацион для&nbsp;туристов, там течёт&nbsp;своя&nbsp;жизнь</p>
                 </div>
                 <span class="realtown__picture">
                   <picture>
@@ -76,7 +76,7 @@
                 <ul class="advantages">
                   <li class="advantages__home advantages__home--home">
                     <b class="advantages__title">Жильe</b>
-                    <p class="advantages__description">Рекомендуем пожить в <br> настоящем мотеле, все как в <br>кино!</p>
+                    <p class="advantages__description">Рекомендуем пожить в настоящем мотеле, все&nbsp;как&nbsp;в кино!</p>
                   </li>
                   <li class="advantages__souvenires advantages__souvenires--souvenires">
                     <b class="advantages__title">Сувениры</b>
@@ -86,7 +86,7 @@
                   </li>
                   <li class="advantages__meal advantages__meal--meal">
                     <b class="advantages__title">Еда</b>
-                    <p class="advantages__description">Всегда заказывайте <br>фирменный бургер, вы не <br>разочаруетесь</p>
+                    <p class="advantages__description">Всегда заказывайте фирменный&nbsp;бургер, вы&nbsp;не&nbsp;разочаруетесь!</p>
                   </li>
                 </ul>
               </div>
