--- a/source/photo.html
+++ b/source/photo.html
@@ -56,79 +56,144 @@
 
           <div class="photos-position">
             <ul class="photos-list">
+
               <li class="photos-item photos-item__sunset">
-                <a class="photos-item__positionsunset">
-                  <picture>
-                    <source media="(min-width:1200px)" srcset="img/photo-sunset-desktop@1x.jpg, img/photo-sunset-desktop@2x.jpg 2x">
-                    <source media="(min-width:768px)" srcset="img/photo-sunset-tablet@1x.jpg, img/photo-sunset-tablet@2x.jpg 2x">
-                    <img class="photos-item__picture-sunset" src="img/photo-sunset-mobile@1x.jpg" srcset="img/photo-sunset-mobile@2x.jpg 2x" width="280" height="280" alt="Фотография степи">
-                  </picture>
-                </a>
-                <div class="photos-item__div-wrap">
+                <div class="photos-item__a-wrapsunset">
+                  <a class="photos-item__position">
+                    <picture>
+                      <source media="(min-width:1200px)" srcset="img/photo-sunset-desktop@1x.jpg, img/photo-sunset-desktop@2x.jpg 2x">
+                      <source media="(min-width:768px)" srcset="img/photo-sunset-tablet@1x.jpg, img/photo-sunset-tablet@2x.jpg 2x">
+                      <img class="photos-item__picture-sunset" src="img/photo-sunset-mobile@1x.jpg" srcset="img/photo-sunset-mobile@2x.jpg 2x" width="280" height="280" alt="Фотография степи">
+                    </picture>
+                  </a>
+                </div>
+                <div class="photos-item__div-wrapsunset">
                   <div class="photos-item__text-wrap">
                     <b class="photos-item__title">Неродные просторы</b>
                     <p class="photos-item__author">Автор фото: Борис</p>
                   </div>
-                  <div class="photos-item__positionlikes">
-                    <button class="photos-item__likes" type="button"><span class="visually-hidden">Нравится</span></button>
-                    <span class="photos-item__numbers">1350</span>
+                  <div class="photos-item__likes-wrap">
+                    <div class="photos-item__likes">
+                      <button class="photos-item__likes-icon" type="button"><span class="visually-hidden">Нравится</span>
+                        <svg version="1.0" id="Layer_4" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" width="22px" height="20px" viewBox="0 0 22 20" enable-background="new 0 0 22 20" xml:space="preserve">
+                          <g id="Page-4">
+                            <g id="Core4" transform="translate(-295.000000, -464.000000)">
+                              <g id="thumb-up4" transform="translate(295.000000, 464.000000)">
+                                <path id="Shape4" fill="#000000" d="M12.383,3.646l-0.637,2.929L11.219,9H13.7h6.2v2c0,0.018,0,0.037,0.001,0.058L17,18H8V8.029 l0.014-0.015L12.383,3.646 M2,10v8V10 M13.2,0L6.6,6.6C6.2,6.9,6,7.4,6,8v10c0,1.1,0.9,2,2,2h9c0.8,0,1.5-0.5,1.8-1.2l3-7.1 C21.9,11.5,21.9,11.2,21.9,11V9H22c0-1.1-0.9-2-2-2h-6.3l1-4.6V2.1c0-0.4-0.2-0.8-0.4-1.1L13.2,0L13.2,0z M4,8H0v12h4V8L4,8z M22,9c0,0.033,0,0.044,0,0.044V9L22,9z"/>
+                              </g>
+                            </g>
+                          </g>
+                        </svg>
+                      </button>
+                    </div>
+                    <div class="photos-item__numbers-wrap">
+                      <span class="photos-item__numbers">1350</span>
+                    </div>
                   </div>
                 </div>
               </li>
               <li class="photos-item">
-                <a class="photos-item__position">
-                  <picture>
-                    <source media="(min-width:1200px)" srcset="img/photo-cactus-desktop@1x.jpg, img/photo-cactus-desktop@2x.jpg 2x">
-                    <source media="(min-width:768px)" srcset="img/photo-cactus-tablet@1x.jpg, img/photo-cactus-tablet@2x.jpg 2x">
-                    <img class="photos-item__picture" src="img/photo-cactus-mobile@1x.jpg" srcset="img/photo-cactus-mobile@2x.jpg 2x" width="280" height="280" alt="Фотография кактуса">
-                  </picture>
-                </a>
+                <div class="photos-item__a-wrap">
+                  <a class="photos-item__position">
+                    <picture>
+                      <source media="(min-width:1200px)" srcset="img/photo-cactus-desktop@1x.jpg, img/photo-cactus-desktop@2x.jpg 2x">
+                      <source media="(min-width:768px)" srcset="img/photo-cactus-tablet@1x.jpg, img/photo-cactus-tablet@2x.jpg 2x">
+                      <img class="photos-item__picture" src="img/photo-cactus-mobile@1x.jpg" srcset="img/photo-cactus-mobile@2x.jpg 2x" width="280" height="280" alt="Фотография кактуса">
+                    </picture>
+                  </a>
+                </div>
                 <div class="photos-item__div-wrap">
                   <div class="photos-item__text-wrap">
                     <b class="photos-item__title">Местная растительность</b>
                     <p class="photos-item__author">Автор фото: Сергей</p>
                   </div>
-                  <div class="photos-item__positionlikes">
-                    <button class="photos-item__likes" type="button"><span class="visually-hidden">Нравится</span></button>
-                    <span class="photos-item__numbers">143</span>
+                  <div class="photos-item__likes-wrap">
+                    <div class="photos-item__likes">
+                      <button class="photos-item__likes-icon" type="button"><span class="visually-hidden">Нравится</span>
+                        <svg version="1.0" id="Layer_5" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" width="22px" height="20px" viewBox="0 0 22 20" enable-background="new 0 0 22 20" xml:space="preserve">
+                          <g id="Page-5">
+                            <g id="Core5" transform="translate(-295.000000, -464.000000)">
+                              <g id="thumb-up5" transform="translate(295.000000, 464.000000)">
+                                <path id="Shape5" fill="#000000" d="M12.383,3.646l-0.637,2.929L11.219,9H13.7h6.2v2c0,0.018,0,0.037,0.001,0.058L17,18H8V8.029 l0.014-0.015L12.383,3.646 M2,10v8V10 M13.2,0L6.6,6.6C6.2,6.9,6,7.4,6,8v10c0,1.1,0.9,2,2,2h9c0.8,0,1.5-0.5,1.8-1.2l3-7.1 C21.9,11.5,21.9,11.2,21.9,11V9H22c0-1.1-0.9-2-2-2h-6.3l1-4.6V2.1c0-0.4-0.2-0.8-0.4-1.1L13.2,0L13.2,0z M4,8H0v12h4V8L4,8z M22,9c0,0.033,0,0.044,0,0.044V9L22,9z"/>
+                              </g>
+                            </g>
+                          </g>
+                        </svg>
+                      </button>
+                    </div>
+                    <div class="photos-item__numbers-wrap">
+                      <span class="photos-item__numbers">143</span>
+                    </div>
                   </div>
                 </div>
               </li>
               <li class="photos-item photos-item__road">
-                <a class="photos-item__position">
-                  <picture>
-                    <source media="(min-width:1200px)" srcset="img/photo-roads-desktop@1x.jpg, img/photo-roads-desktop@2x.jpg 2x">
-                    <source media="(min-width:768px)" srcset="img/photo-roads-tablet@1x.jpg, img/photo-roads-tablet@2x.jpg 2x">
-                    <img class="photos-item__picture" src="img/photo-roads-mobile@1x.jpg" width="280" height="280" alt="Фотография дороги в горах">
-                  </picture>
-                </a>
+                <div class="photos-item__a-wrap">
+                  <a class="photos-item__position">
+                    <picture>
+                      <source media="(min-width:1200px)" srcset="img/photo-roads-desktop@1x.jpg, img/photo-roads-desktop@2x.jpg 2x">
+                      <source media="(min-width:768px)" srcset="img/photo-roads-tablet@1x.jpg, img/photo-roads-tablet@2x.jpg 2x">
+                      <img class="photos-item__picture" src="img/photo-roads-mobile@1x.jpg" width="280" height="280" alt="Фотография дороги в горах">
+                    </picture>
+                  </a>
+                </div>
                 <div class="photos-item__div-wrap">
                   <div class="photos-item__text-wrap">
                     <b class="photos-item__title">Дорога на север</b>
                     <p class="photos-item__author">Автор фото: Петр</p>
                   </div>
-                  <div class="photos-item__positionlikes">
-                    <button class="photos-item__likes" type="button"><span class="visually-hidden">Нравится</span></button>
-                    <span class="photos-item__numbers"> 96</span>
+                  <div class="photos-item__likes-wrap">
+                    <div class="photos-item__likes">
+                      <button class="photos-item__likes-icon" type="button"><span class="visually-hidden">Нравится</span>
+                        <svg version="1.0" id="Layer_6" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" width="22px" height="20px" viewBox="0 0 22 20" enable-background="new 0 0 22 20" xml:space="preserve">
+                          <g id="Page-6">
+                            <g id="Core6" transform="translate(-295.000000, -464.000000)">
+                              <g id="thumb-up6" transform="translate(295.000000, 464.000000)">
+                                <path id="Shape6" fill="#000000" d="M12.383,3.646l-0.637,2.929L11.219,9H13.7h6.2v2c0,0.018,0,0.037,0.001,0.058L17,18H8V8.029 l0.014-0.015L12.383,3.646 M2,10v8V10 M13.2,0L6.6,6.6C6.2,6.9,6,7.4,6,8v10c0,1.1,0.9,2,2,2h9c0.8,0,1.5-0.5,1.8-1.2l3-7.1 C21.9,11.5,21.9,11.2,21.9,11V9H22c0-1.1-0.9-2-2-2h-6.3l1-4.6V2.1c0-0.4-0.2-0.8-0.4-1.1L13.2,0L13.2,0z M4,8H0v12h4V8L4,8z M22,9c0,0.033,0,0.044,0,0.044V9L22,9z"/>
+                              </g>
+                            </g>
+                          </g>
+                        </svg>
+                      </button>
+                    </div>
+                    <div class="photos-item__numbers-wrap">
+                      <span class="photos-item__numbers"> 96</span>
+                    </div>
                   </div>
                 </div>
               </li>
               <li class="photos-item">
-                <a class="photos-item__position">
-                  <picture>
-                    <source media="(min-width:1200px)" srcset="img/photo-bridge-desktop@1x.jpg, img/photo-bridge-desktop@2x.jpg 2x">
-                    <source media="(min-width:768px)" srcset="img/photo-bridge-tablet@1x.jpg, img/photo-bridge-tablet@2x.jpg 2x">
-                    <img class="photos-item__picture" src="img/photo-bridge-mobile@1x.jpg" srcset="img/photo-bridge-mobile@2x.jpg 2x" width="280" height="280" alt="Фотография моста">
-                  </picture>
-                </a>
+                <div class="photos-item__a-wrap">
+                  <a class="photos-item__position">
+                    <picture>
+                      <source media="(min-width:1200px)" srcset="img/photo-bridge-desktop@1x.jpg, img/photo-bridge-desktop@2x.jpg 2x">
+                      <source media="(min-width:768px)" srcset="img/photo-bridge-tablet@1x.jpg, img/photo-bridge-tablet@2x.jpg 2x">
+                      <img class="photos-item__picture" src="img/photo-bridge-mobile@1x.jpg" srcset="img/photo-bridge-mobile@2x.jpg 2x" width="280" height="280" alt="Фотография моста">
+                    </picture>
+                  </a>
+                </div>
                 <div class="photos-item__div-wrap">
                   <div class="photos-item__text-wrap">
                     <b class="photos-item__title">Мост дьявола</b>
                     <p class="photos-item__author">Автор фото: Антон</p>
                   </div>
-                  <div class="photos-item__positionlikes">
-                    <button class="photos-item__likes" type="button"><span class="visually-hidden">Нравится</span></button>
-                    <span class="photos-item__numbers">254</span>
+                  <div class="photos-item__likes-wrap">
+                    <div class="photos-item__likes">
+                      <button class="photos-item__likes-icon" type="button"><span class="visually-hidden">Нравится</span>
+                        <svg version="1.0" id="Layer_7" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" width="22px" height="20px" viewBox="0 0 22 20" enable-background="new 0 0 22 20" xml:space="preserve">
+                          <g id="Page-7">
+                            <g id="Core7" transform="translate(-295.000000, -464.000000)">
+                              <g id="thumb-up7" transform="translate(295.000000, 464.000000)">
+                                <path id="Shape7" fill="#000000" d="M12.383,3.646l-0.637,2.929L11.219,9H13.7h6.2v2c0,0.018,0,0.037,0.001,0.058L17,18H8V8.029 l0.014-0.015L12.383,3.646 M2,10v8V10 M13.2,0L6.6,6.6C6.2,6.9,6,7.4,6,8v10c0,1.1,0.9,2,2,2h9c0.8,0,1.5-0.5,1.8-1.2l3-7.1 C21.9,11.5,21.9,11.2,21.9,11V9H22c0-1.1-0.9-2-2-2h-6.3l1-4.6V2.1c0-0.4-0.2-0.8-0.4-1.1L13.2,0L13.2,0z M4,8H0v12h4V8L4,8z M22,9c0,0.033,0,0.044,0,0.044V9L22,9z"/>
+                              </g>
+                            </g>
+                          </g>
+                        </svg>
+                      </button>
+                    </div>
+                    <div class="photos-item__numbers-wrap">
+                      <span class="photos-item__numbers">254</span>
+                    </div>
                   </div>
                 </div>
               </li>
@@ -160,10 +225,10 @@
                 </div>
               </div>
               <div class="panel__wrap-replay">
-                <button class="panel__replay" href="#"><span class="visually-hidden">Весь экран</span>
+                <button class="panel__replay"><span class="visually-hidden">Весь экран</span>
                 <svg version="1.0" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" width="16px" height="20px" viewBox="0 0 16 20" enable-background="new 0 0 16 20" xml:space="preserve">
                   <path d="M8,4V0L3,5l5,5V6c3.315,0,6,2.686,6,6s-2.685,6-6,6s-6-2.686-6-6H0c0,4.42,3.58,8,8,8s8-3.58,8-8S12.42,4,8,4z"/>
-                </svg></a>
+                </svg></button>
               </div>
               <div class="panel__wrap-subtitles">
                 <button class="panel__subtitles"><span class="visually-hidden">Весь экран</span>
@@ -175,10 +240,10 @@
                 <button class="panel__fullscreen"><span class="visually-hidden">Весь экран</span>
                 <svg version="1.0" id="Layer_3" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" width="20px" height="20px" viewBox="0 0 20 20" enable-background="new 0 0 20 20" xml:space="preserve">
                   <g>
-                    <polygon fill="#454545" points="0,0 0,3 0,6 3,6 3,3 6,3 6,0 3,0"/>
-                    <polygon fill="#454545" points="3,14 0,14 0,17 0,20 3,20 6,20 6,17 3,17"/>
-                    <polygon fill="#454545" points="17,0 14,0 14,3 17,3 17,6 20,6 20,3 20,0"/>
-                    <polygon fill="#454545" points="17,17 14,17 14,20 17,20 20,20 20,17 20,14 17,14"/>
+                    <polygon fill points="0,0 0,3 0,6 3,6 3,3 6,3 6,0 3,0"/>
+                    <polygon fill points="3,14 0,14 0,17 0,20 3,20 6,20 6,17 3,17"/>
+                    <polygon fill points="17,0 14,0 14,3 17,3 17,6 20,6 20,3 20,0"/>
+                    <polygon fill points="17,17 14,17 14,20 17,20 20,20 20,17 20,14 17,14"/>
                   </g>
                 </svg></button>
               </div>
