--- a/source/index.html
+++ b/source/index.html
@@ -86,7 +86,7 @@
                   </li>
                   <li class="advantages__meal advantages__meal--meal">
                     <b class="advantages__title">Еда</b>
-                    <p class="advantages__description">Всегда заказывайте фирменный&nbsp;бургер, вы&nbsp;не&nbsp;разочаруетесь!</p>
+                    <p class="advantages__description">Всегда заказывайте фирменный&nbsp;бургер, вы&nbsp;не разочаруетесь!</p>
                   </li>
                 </ul>
               </div>
@@ -148,6 +148,9 @@
           <h2 class="visually-hidden">Часть страницы с картой</h2>
           <div class="map__position">
             <img class="map__marker" src="img/icon-map-marker.svg" width="25" height="25" alt="map-marker">
+            <div class="map__interactive">
+              <script type="text/javascript" charset="utf-8" async src="https://api-maps.yandex.ru/services/constructor/1.0/js/?um=constructor%3A81896f5ce68ab0d11cdbc648b9c90d494159e1cc9df6f370e962e25dee661975&amp;width=auto&amp;height=350&amp;lang=ru_RU&amp;scroll=true"></script>
+            </div>
           </div>
         </section>
 
